# g1sim223

./: .gitignore  Dockerfile  README.md  build.sh  connect.sh  connect_vnc.sh  deploy.sh  docker-compose.yml  reset_pose_test.py  robotic_crew_rsa_gcp  run_docker.sh  run_rviz.sh  run_simulation.sh  run_simulation_bg.sh  run_webrtc.sh  save_map.sh  save_map_local.sh  send_commands_8bit.py  send_commands_keyboard.py  sim_main.py  start_simulation.sh  stop_simulation.sh
action_provider/: action_provider_wh_dds.py
dds/: commands_dds.py  dds_create.py  dds_master.py  lidar_dds.py  sharedmemorymanager.py
g1_sim_controller/: Dockerfile  ros_entrypoint.sh  run.sh
g1_sim_controller/maps/: map_20260414_123942.data  map_20260414_123942.pgm  map_20260414_123942.yaml  rs_map.pgm  rs_map.yaml
g1_sim_controller/rviz/: pointcloud.rviz
g1_sim_controller/src/: package.xml  setup.cfg  setup.py
g1_sim_controller/src/config/: cyclonedds.xml  fastdds_profile.xml  nav2_params.yaml  navigate_to_pose.xml  pc_to_laserscan.yaml  slam_toolbox.yaml  slam_toolbox_localize.yaml
g1_sim_controller/src/g1_sim_controller/: basic_telemetry.py  camera_bridge.py  cmd_vel_bridge.py  dds_ros2_bridge.py  pause_resume.py  pose_publisher.py
g1_sim_controller/src/launch/: bringup.launch.py  nav.launch.py
inorbit_agent/: agent.env.sh
inorbit_agent/user_scripts/: stop.sh
tasks/common_config/: __init__.py  camera_configs.py  raycaster_configs.py
tasks/common_observations/: camera_state.py
tasks/common_scene/: base_scene_pickplace_cylindercfg_wholebody.py
tools/: shared_memory_utils.py
(+1 files in other folders)
