<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_sim_controller</name>
  <version>0.0.0</version>
  <description>A simple ROS2 node that prints messages from a configurable topic.</description>
  <maintainer email="rober@todo.todo">rober</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>octomap_server</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
